feat: complete Local RAG system - Spring Boot 3.5.11 + Spring AI 1.1.1 (Java 17), pgvector, Ollama, Vanilla JS frontend, Docker Compose
Agent-Logs-Url: https://github.com/aname4me-String/insyStuff/sessions/831193d9-9d8f-43eb-be6b-803e8da1a706

Co-authored-by: aname4me-String <77669198+aname4me-String@users.noreply.github.com>